setting hiding shop links so that we can deploy to live without it being visible

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -5,13 +5,26 @@
   <category-list></category-list>
 </div>
 <div class="col-sm-9 col-md-10 col-lg-10">
+  {% if request.user.is_superuser %}
+  <div class="row">
+    <div class="col-sm-4">
+      <a href="/shop/" class="btn btn-block btn-success">Shop</a>
+    </div>
+    <div class="col-sm-4">
+      <a href="/shop/receipts/" class="btn btn-block btn-primary">Receipts</a>
+    </div>
+    <div class="col-sm-4">
+      <a href="/shop/admin/" class="btn btn-block btn-warning">Admin</a>
+      <br />
+    </div>
+  </div>
+  {% endif %}
   {% block products %}{% endblock %}
 </div>
 {% endblock %}
 
 {% block extrajs %}
 {% block pjs %}{% endblock %}
-<script>var CART = {{ cart|safe }};</script>
 <script src="/products.js"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/store.tag"></script>
 <script type="riot/tag" src="{{ STATIC_URL }}tags/cart.tag"></script>
