pagination; product/product-admin are now similar tags under prdouct-list

--- a/main/static/less/store.less
+++ b/main/static/less/store.less
@@ -1,6 +1,6 @@
 @rowHeight: 34px;
 @rowSpacing: 10px;
-product, product_admin .product {
+product, product-admin {
   .name { height: 40px; }
   .price {
     font-size: 20px;
@@ -30,7 +30,7 @@ product, product_admin .product {
   }
 }
 
-product, product_admin .product {
+product, product-admin {
   .img,.cart-buttons {
     transition: height 0.25s;
     overflow: hidden;
