--- a/store/templates/store/receipts.html
+++ b/store/templates/store/receipts.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Shop Receipts{% endblock %}
+
 {% block content %}
 <div id="receipts">
   <h1>Outstanding Orders</h1>
