--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,5 +1,7 @@
 {% extends "store/base.html" %}
 
+{% block title %}Shop{% endblock %}
+
 {% block products %}
 <product-list></product-list>
 {% endblock %}
