--- a/main/static/css/multi_photo_upload.css
+++ b/main/static/css/multi_photo_upload.css
@@ -13,7 +13,7 @@
 }
 .dropzone:before { content: "Drop images here."; }
 .field-_auto_photos label { display: none; }
-.dropzone:hover {
+.dropzone:hover, .dropzone.hover {
   box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
   background-color: #555;
   color: #999;
