--- a/main/templates/admin/dropphoto.html
+++ b/main/templates/admin/dropphoto.html
@@ -1,11 +1,7 @@
-{% extends "base.html" %}
-
-{% block main %}
 <div id="content-main">
   {% csrf_token %}
   <div>
-    <input type="text" name="name" placeholder="Files will be named NAME_1, NAME_2, etc."
-           id="photos_name"/>
+    <input type="text" name="name" placeholder="Files will be named NAME_1, NAME_2, etc." id="photos_name"/>
     <div id="dropzone" class="dropzone"></div>
     <photo-list></photo-list>
   </div>
@@ -13,6 +9,12 @@
 
 <link href="{{ STATIC_URL }}css/multi_photo_upload.css" rel="stylesheet" type="text/css">
 <script src="{{ STATIC_URL }}tags/photo-list.tag" type="riot/tag"></script>
-<script>window.ADMIN_PHOTOS = {{ photos|safe }}; </script>
+<script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
+<script>
+  window._PHOTOS = {
+    photos: {{ photos|safe }},
+    content_type: "{{ content_type }}",
+    object_id: {{ obj.pk }}
+  }
+</script>
 <script src="{{ STATIC_URL }}js/multi_photo_upload.js"></script>
-{% endblock %}
