--- a/main/templates/admin/dropphoto.html
+++ b/main/templates/admin/dropphoto.html
@@ -1,8 +1,12 @@
 <div id="content-main">
   {% csrf_token %}
   <div>
+    <div class="well">
+      <h3>Search Photos</h3>
+    <photo-search></photo-search>
+    </div>
+    <h3>Add/Edit Photos</h3>
     <input type="text" name="name" placeholder="Files will be named NAME_1, NAME_2, etc." id="photos_name"/>
-    <div id="dropzone" class="dropzone"></div>
     <photo-list></photo-list>
   </div>
 </div>
