--- a/main/static/css/multi_photo_upload.less
+++ b/main/static/css/multi_photo_upload.less
@@ -1,29 +1,23 @@
 .form-horizontal .control-group.field-dropphoto {
   display: block;
-}
-
-.form-horizontal .control-group.dropphoto>div {
-  display: block;
-}
-.form-horizontal .control-group.field-dropphoto .control-label {
-  display: block;
-  text-align: left;
-}
-.form-horizontal .control-group.field-dropphoto .controls {
-  box-sizing: border-box;
-  display: block;
-  margin: 0;
-  width: 100%;
+  > div { display: block; }
+  .readonly { width: 100%; }
+  .control-label {
+    display: block;
+    text-align: left;
+  }
+  .controls {
+    box-sizing: border-box;
+    display: block;
+    margin: 0;
+    width: 100%;
+  }
 }
 
 .rows {
   min-height: 1px;
   overflow: hidden;
   margin: 10px -5px;
-}
-
-.form-horizontal .control-group .controls .readonly {
-  width: 100%;
 }
 
 .fourth {
@@ -46,11 +40,25 @@
   box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
   color: #666;
   font-size: 200%;
-  padding-top: 10px;
-  height: 100px;
   text-align: center;
+  position: relative;
+  &:before {
+    content: "Drop new images here.";
+    left: 0;
+    margin-top: -25px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+  }
+  &:after {
+    content: "";
+    display: block;
+    width: 100%;
+    padding-top: 100%%;
+  }
 }
-.dropzone:before { content: "Drop images here."; }
+
 .field-_auto_photos label { display: none; }
 .dropzone:hover, .dropzone.hover {
   box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
