--- a/media/templates/photo/dropphoto.html
+++ b/media/templates/photo/dropphoto.html
@@ -13,7 +13,7 @@
 </div>
 
 {% compress css %}
-<link href="{{ STATIC_URL }}css/multi_photo_upload.less" rel="stylesheet" type="text/less">
+<link href="{{ STATIC_URL }}less/multi_photo_upload.less" rel="stylesheet" type="text/less">
 {% endcompress %}
 <script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
 <script src="{{ STATIC_URL }}tags/photo-list.tag" type="riot/tag"></script>
