--- a/media/static/less/multi_photo_upload.less
+++ b/media/static/less/multi_photo_upload.less
@@ -33,30 +33,39 @@
   overflow-y: hidden;
 }
 
-.dropzone {
-  background-color: #ccc;
-  border: 2px dashed #666;
-  border-radius: 10px;
-  box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
-  color: #666;
-  font-size: 200%;
-  text-align: center;
-  position: relative;
-  &:before {
-    content: "Drop new images here.";
-    left: 0;
-    margin-top: -25px;
-    position: absolute;
+photo-list {
+  .dropzone {
+    background-color: #ccc;
+    border: 2px dashed #666;
+    border-radius: 10px;
+    box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
+    color: #666;
+  }
+  [data-error] {
+    background: #f2dede;
     text-align: center;
-    top: 50%;
-    width: 100%;
   }
-  &:after {
-    content: "";
-    display: block;
-    width: 100%;
-    padding-top: 100%%;
+  .dropzone,[data-error] {
+    font-size: 200%;
+    position: relative;
+    &:before {
+      left: 0;
+      margin-top: -25px;
+      position: absolute;
+      text-align: center;
+      top: 50%;
+      width: 100%;
+    }
+    &:after {
+      content: "";
+      display: block;
+      width: 100%;
+      padding-top: 100%%;
+    }
   }
+
+  .dropzone:before { content: "Drop new images here."; }
+  [data-error]:before { content: attr(data-error); color: darken(#f2dede,50%); }
 }
 
 .field-_auto_photos label { display: none; }
