adding unlink, delete and edit buttons

--- a/media/templates/photo/bulk_tag_detail.html
+++ b/media/templates/photo/bulk_tag_detail.html
@@ -20,7 +20,7 @@
     label.classList.add("loading");
     $.post(
       '.',
-      {photo_pk: this.value,checked:this.checked},
+      {photo_id: this.value,checked:this.checked},
       function(data) { console.log(label);label.classList.remove("loading"); }
     )
   }
