--- a/media/static/less/multi_photo_upload.less
+++ b/media/static/less/multi_photo_upload.less
@@ -68,6 +68,24 @@ photo-list {
   [data-error]:before { content: attr(data-error); color: darken(#f2dede,50%); }
 }
 
+photo {
+  position: relative;
+  .buttons {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 80px;
+    z-index:1;
+    .btn {
+      box-sizing: border-box;
+      display: block;
+      width: 100%;
+    }
+  }
+  &:hover .buttons { display: block; }
+}
+
 .field-_auto_photos label { display: none; }
 .dropzone:hover, .dropzone.hover {
   box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
