--- a/media/templates/photo/_photo_checkbox.html
+++ b/media/templates/photo/_photo_checkbox.html
@@ -1,8 +1,8 @@
 {% load thumbnail %}
 {% thumbnail photo.file "200x200" crop="center" as im %}
-<input class="hidden_checkbox" id="id_photo_{{ photo.pk }}" value="{{ photo.pk }}"
+<input class="hidden_checkbox" id="id_photo_{{ photo.id }}" value="{{ photo.id }}"
        name="untagged_photo" type="checkbox"{% if checked %} checked="checked"{% endif %} />
-<label for="id_photo_{{ photo.pk }}" class="well">
+<label for="id_photo_{{ photo.id }}" class="well">
   <img src="{{ im.url }}" />
   <h3>{{ photo }}</h3>
 </label>
