--- a/media/static/less/multi_photo_upload.less
+++ b/media/static/less/multi_photo_upload.less
@@ -130,3 +130,40 @@ photo {
 }
 
 #images_list img { max-width: 300px; display: block; }
+
+.foreground_loading {
+  position: relative;
+  &:before {
+    background: url(/static/lightbox/img/loading.gif) center no-repeat rgba(255,255,255,0.75);
+    box-sizing: border-box;
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+}
+
+.background_loading {
+  position: relative;
+  &:before {
+    animation: fa-spin 2s infinite ease-in-out reverse;
+    animation-direction: alternate;
+    border-radius: 100%;
+    box-shadow: 1px 1px 1px white;
+    content: "\f1ce";
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 30px;
+    height: 30px;
+    line-height: 30px;
+    position: absolute;
+    text-align: center;
+    text-shadow: 0px 0px 4px #10a49b;
+    top: 10px;
+    left: 10px;
+    width: 30px;
+    z-index: 1;
+  }
+}
