--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -1,3 +1,4 @@
+{% load compress %}
 <div class="modal fade" id="cartModal">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -8,10 +9,10 @@
         <h4 class="modal-title">Shopping Cart</h4>
       </div>
       <div class="modal-body">
+        {% compress js %}
         <script type="text/javascript" src="{{ STATIC_URL }}js/simpleCart.js"></script>
-        <script type="text/javascript">
-          simpleCart.email = "{{ settings.PAYPAL_RECEIVER_EMAIL }}";</script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/cart.js"></script>
+        {% endcompress %}
         <div id="cart">
           <div class="well">
             <div id="cartEmpty">Your cart is empty</div>
