membershipproduct hooked up through course listener

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -109,6 +109,7 @@ h3.block_title {
   .button_box { padding-top: 15px; }
   form { text-align: center; }
   select { width: 250px; max-width: 100%; }
+  .fa-check { color: @brand-success }
 }
 
 @media (min-width: @screen-lg-min) {
