--- a/membership/templates/membership/settings.html
+++ b/membership/templates/membership/settings.html
@@ -4,8 +4,7 @@
 {% block full_title %}Settings - {{ SITE_NAME }}{% endblock %}
 {% block header_content %}Edit your account settings{% endblock %}
 
-{% block main %}
-<p>If you want to change your password click <a href="{% url "auth_password_change" %}">here</a></p>
+{% block content %}
 <form method="POST" enctype="multipart/form-data" class="cvfloat">
   {% csrf_token %}
   {% for form in forms %}{% for error in form.non_field_errors %}
@@ -33,4 +32,10 @@
 </p>
 {% endif %}
 {% endif %}
+{% endblock %}
+
+{% block side %}
+<h1>Other settings</h1>
+<p>If you want to change your password click <a href="{% url "auth_password_change" %}">here</a></p>
+<p>Membership Status: <a href="{% url "membership_status" %}">{{ request.user.usermembership.membership }}</a></p>
 {% endblock %}
