--- a/media/static/less/multi_photo_upload.less
+++ b/media/static/less/multi_photo_upload.less
@@ -26,11 +26,12 @@
   float: left;
   width: 33%;
   max-width: 200px;
-}
-
-.search_results .name {
-  height: 3em;
-  overflow-y: hidden;
+  .name {
+    height: 36px;
+    line-height: 18px;
+    overflow-y: hidden;
+    &:focus { overflow-y: visible; }
+  }
 }
 
 photo-list {
@@ -40,6 +41,7 @@ photo-list {
     border-radius: 10px;
     box-shadow: inset 2px 2px 10px 2px rgba(0, 0, 0, 0.5);;
     color: #666;
+    min-height: 200px;
   }
   [data-error] {
     background: #f2dede;
