--- a/membership/templates/membership/analysis.html
+++ b/membership/templates/membership/analysis.html
@@ -36,6 +36,13 @@
   {% for membership,users in memberships %}
   <div role="tabpanel" class="tab-pane {% if forloop.first %}active{% endif %}" id="{{ membership.name|slugify }}">
     <table class="table table-striped">
+      <tr>
+        <th>Username</th>
+        <th>Start</th>
+        <th>End</th>
+        <th>Enrollments</th>
+        <th>Subscriptions</th>
+      </tr>
       {% for user in users %}
       <tr>
         <td><a href="/admin/user/user/{{ user.pk }}/">{{ user }}</a></td>
