--- a/main/static/less/thing.less
+++ b/main/static/less/thing.less
@@ -29,16 +29,16 @@
 .social_links {
   .popup {
     border-radius: 5px;
-    color: white;
+    color: @gray-lighter;
     display: inline-block;
     font-size: 20px;
     height: @size;
     line-height: @size;
     text-align: center;
     width: @size;
-    &.pinterest { background: #cc2127; }
-    &.twitter { background: #55ACEE }
-    &.facebook { background: #3B5998; }
-    &.google-plus { background: #dd4b39; }
+    &.pinterest { background: @brandPinterest; }
+    &.twitter { background: @brandTwitter; }
+    &.facebook { background: @brandFacebook; }
+    &.google-plus { background: @brandGoogle; }
   }
 }
