--- a/main/static/less/comment.less
+++ b/main/static/less/comment.less
@@ -13,7 +13,7 @@ comment-list comment {
   padding: 7px;
   .comment_content:empty:before {
     background: rgba(255,255,255,0.3);
-    border: .5em grey dashed;
+    border: .5em @gray dashed;
     content: "THIS COMMENT INTENTIONALLY LEFT BLANK";
     display: block;
     height: 5em;
@@ -27,7 +27,7 @@ comment-list comment {
 }
 
 comment-list .comment_actions a {
-  border-left: 2px solid #ddd;
+  border-left: 2px solid @table-border-color;
   display: inline-block;
   margin: 5px 0 0;
   padding: 0 9px;
@@ -52,7 +52,7 @@ comment-list {
 }
 
 comment-list comment {
-  border-left: solid 4px #dddddd;
+  border-left: solid 4px @table-border-color;
   margin-left: 0.5em;
   margin-top: 0.5em;
   padding-left: 0.5em;
