--- a/main/static/less/map.less
+++ b/main/static/less/map.less
@@ -1,23 +1,23 @@
 #map {
   height: 100%;
   left: 0;
-  outline: 1px black solid;
+  outline: 1px @gray-darker solid;
   padding: 0 30px;
   position: absolute;
   top: 0;
   width: 100%;
 }
 .room_marker {
-  box-shadow: 1px 1px 2px black, inset 1px 1px 1px rgba(255,255,255,0.75);
+  box-shadow: 1px 1px 2px @gray-darker, inset 1px 1px 1px fade(@gray-lighter,75%);
   border-radius: 100%;
-  color: white;
+  color: @gray-lighter;
   height: 26px;
   font-weight: bold;
   line-height: 26px;
   margin: -13px 0 0 -13px;
   text-align: center;
   position: absolute;
-  text-shadow: 1px 1px 1px black;
+  text-shadow: 1px 1px 1px @gray-darker;
   width: 26px;
 }
 
