--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -7,23 +7,12 @@
 {% endcompress %}
 
 <style type="text/css">
-  {% if request.theme == "dark" %}
-  @media (min-width: 767px) {
-  html, iframe, frame
-  {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(100%) hue-rotate(180deg) !important}
-
-  img,embed[flashvars],*[type*="application/x-shockwave-flash"],*[type*="application/x-silverlight"],[type=image]
-  {-webkit-filter: invert(.95) hue-rotate(180deg) !important;filter: invert(1) hue-rotate(180deg) !important}
-
-  @-moz-document url-prefix(http://), url-prefix(https://), url-prefix(file://) {
-  *{ color: #999999 !important; background: #151515 !important; border-color: #333333 !important; }
-  * { text-shadow: none !important; }
-  a,a *{ color: #6666BB !important; text-decoration: none !important; }
-  a:hover, a:hover *{ color: #55AAAA !important; }
-  a:visited, a:visited *{ color: #884488 !important; }
-  a:visited:hover, a:visited:hover *{ color: #55AAAA !important; }
-  }
-  }
-  {% endif %}
-  @media (max-width: 768px) { #bot_right { display: none !important; } }
+html, iframe, frame {
+  -webkit-filter: invert(.95) hue-rotate(180deg) !important;
+  filter: invert(100%) hue-rotate(180deg) !important
+}
+img,embed[flashvars],*[type*="application/x-shockwave-flash"],*[type*="application/x-silverlight"],[type=image] {
+  -webkit-filter: invert(.95) hue-rotate(180deg) !important;
+  filter: invert(1) hue-rotate(180deg) !important
+}
 </style>
