fixing a bug and changing the map timeout

--- a/main/templates/dxf.html
+++ b/main/templates/dxf.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 <script>
-setTimeout(function() {window.location = window.location;},15*60*1000);
+setTimeout(function() {window.location = window.location;},4*60*60*1000);
 
 var LOCATION_DATA = {
   dxf: {{ location.dxf_as_json|safe }},
