fixing broken discount

--- a/course/templates/course/_cart.html
+++ b/course/templates/course/_cart.html
@@ -63,8 +63,8 @@ $(".itemRemove a").on("click",toggleCourses);
   <div id="mobileCart" class="alert alert-success">
     <button class="btn btn-primary btn-cart" data-toggle="modal" data-target="#cartModal">
       <i class="fa fa-shopping-cart"></i>
-      <span class="simpleCart_quantity">1</span> items
-      (<span class="simpleCart_total">$60.00</span>)
+      <span class="simpleCart_quantity"></span> items
+      (<span class="simpleCart_total"></span>)
     </button>
   </div>
 </div>
