--- a/main/templates/admin/txrx/_flags.html
+++ b/main/templates/admin/txrx/_flags.html
@@ -1,16 +1,20 @@
 {% load admin_dashboard %}
 
 <div class="module" id="recent-actions-module">
+  {% get_user_flags %}
+  {% for verbose, flags, cls in user_flags %}
   <h4 class="italic-title">Flagged Accounts</h4>
   <ul class="actionlist" style="width: 400px;">
-    {% get_user_flags %}
-    {% for flag in user_flags %}
+    {% for flag in flags %}
     <li>
       <i class="icon-flag"></i>
       <a href="/admin/membership/userflag/{{ flag.pk }}/">
         {{ flag.user }} - {{ flag.get_reason_display }} [{{ flag.datetime|date:"m/d/Y" }}]</a>
       <a href="/admin/membership/userflag/{{ flag.pk }}/delete" class="pull-right"><i class="icon-trash"></i></a>
     </li>
+    {% empty %}
+    <li>No Flags, hurray!</li>
     {% endfor %}
   </ul>
+  {% endfor %}
 </div>
