--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -21,9 +21,16 @@
 {% block sidebar %}
 {% if request.path == "/admin/" %}
 <div id="content-related">
-  {% include "admin/txrx/_flags.html" %}
+  <flag-list></flag-list>
 </div>
 {% else %}
 {{ block.super }}
 {% endif %}
+{% endblock %}
+
+{% block extrajs %}
+{{ block.super }}
+<script src="{{ STATIC_URL }}js/admin_index.js"></script>
+<script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
+<script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
 {% endblock %}
