--- a/main/templates/admin/txrx/_flags.html
+++ b/main/templates/admin/txrx/_flags.html
@@ -4,21 +4,35 @@
   {% get_user_flags %}
   {% for verbose, flags, cls in user_flags %}
   <h4 class="italic-title">{{ verbose }}</h4>
-  <div class="actionlist" style="width: 400px;">
-    <table style="width: 100%;">
-    {% for flag in flags %}
-    <tr>
-      <td><i class="icon-flag"></i></td>
-      <td><a href="/admin/membership/userflag/{{ flag.pk }}/">
-          {{ flag.subscription.user }} - {{ flag.subscription.product }}
-          <br/>{{ flag.get_reason_display }} [{{ flag.datetime|date:"m/d/Y" }}]
-      </a></td>
-      <td><a href="/admin/membership/suscriptionflag/{{ flag.pk }}/delete"><i class="icon-trash"></i></a></td>
-    </tr>
-    {% empty %}
-    <tr><td>No Flags, hurray!</td></tr>
-    {% endfor %}
+  <div style="width: 400px;">
+    <table style="width: 100%;" class="table striped table-striped">
+      {% for flag in flags %}
+      <tr>
+        <td><a href="/admin/membership/userflag/{{ flag.pk }}/">
+            {{ flag.subscription.user }} - {{ flag.subscription.product }}
+            <br/>{{ flag.get_reason_display }} [{{ flag.datetime|date:"m/d/Y" }}]
+        </a></td>
+        <td>
+          <button onclick="sendFlag(this);return false;" data-pk="{{ flag.pk }}">
+            <i class="icon-envelope"></i></button>
+          <button onclick="deleteFlag(this);return false;" data-pk="{{ flag.pk }}">
+            <i class="icon-trash"></i></button>
+        </td>
+      </tr>
+      {% empty %}
+      <tr><td>No Flags, hurray!</td></tr>
+      {% endfor %}
     </table>
   </div>
   {% endfor %}
 </div>
+<script>
+  function ajaxPost(element,url) {
+    var pk = element.dataset.pk;
+    console.log(pk);
+  }
+  function deleteFlag(element) {
+    var url = "/flags/delete/";
+    ajaxPost(element,url);
+  }
+</script>
