--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "suit:admin/index.html" %}
-{% load i18n admin_dashboard %}
+{% load i18n admin_dashboard compress %}
 
 {% block extrastyle %}
 {{ block.super }}
@@ -33,4 +33,7 @@
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
 <script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="https://cdn.jsdelivr.net/g/riot@2.0.14(riot.min.js+compiler.min.js)"></script>
+{% compress css %}
+<link type="text/less" rel="stylesheet" href="{{ STATIC_URL }}less/admin_index.less" />
+{% endcompress %}
 {% endblock %}
